cmake_minimum_required(VERSION 3.23)
project(AEDProjeto2)

set(CMAKE_CXX_STANDARD 14)

add_executable(AEDProjeto2 src/main.cpp src/Airport.cpp src/Airport.h src/Airline.cpp src/Airline.h src/Flight.cpp src/Flight.h src/Reader.cpp src/Reader.h src/Graph.cpp src/Graph.h src/FlightController.cpp src/FlightController.h src/Terminal.cpp src/Terminal.h src/Algorithms.cpp src/Algorithms.h)
